--- a/development_resource_packs/SkyBlock/texts/en_US.lang
+++ b/development_resource_packs/SkyBlock/texts/en_US.lang
@@ -1,3 +1,3 @@
-entity.cope:invisible_chest_minecart.name=SkyBlock Menu
-item.cope:invisible_chest_minecart.name=SkyBlock Menu
-item.cope:skyblock_star.name=§aSkyBlock Menu §7(Right Click)
+entity.skyblock:invisible_chest_minecart.name=SkyBlock Menu
+item.skyblock:invisible_chest_minecart.name=SkyBlock Menu
+item.skyblock:menu_star.name=§aSkyBlock Menu §7(Right Click)
